parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> calc
Rule 1     calc -> element calc
Rule 2     calc -> <empty>
Rule 3     element -> FUNCTION IDENTIFIER LPAREN optparams RPAREN compoundstmt
Rule 4     element -> sstmt
Rule 5     optparams -> params
Rule 6     optparams -> <empty>
Rule 7     params -> IDENTIFIER COMMA params
Rule 8     params -> IDENTIFIER
Rule 9     compoundstmt -> LBRACE stmts RBRACE
Rule 10    stmts -> sstmt stmts
Rule 11    stmts -> <empty>
Rule 12    stmt_or_compound -> sstmt
Rule 13    stmt_or_compound -> compoundstmt
Rule 14    optsemi -> <empty>
Rule 15    optsemi -> SEMICOLON
Rule 16    sstmt -> IF exp stmt_or_compound optsemi
Rule 17    sstmt -> IF exp compoundstmt ELSE stmt_or_compound optsemi
Rule 18    sstmt -> IDENTIFIER EQUAL exp SEMICOLON
Rule 19    sstmt -> RETURN exp SEMICOLON
Rule 20    sstmt -> DEFINE IDENTIFIER EQUAL exp SEMICOLON
Rule 21    sstmt -> exp SEMICOLON
Rule 22    exp -> IDENTIFIER
Rule 23    exp -> LPAREN exp RPAREN
Rule 24    exp -> NUMBER
Rule 25    exp -> TRUE
Rule 26    exp -> FALSE
Rule 27    exp -> NOT exp
Rule 28    exp -> exp PLUS exp
Rule 29    exp -> exp MINUS exp
Rule 30    exp -> exp TIMES exp
Rule 31    exp -> exp MOD exp
Rule 32    exp -> exp DIVIDE exp
Rule 33    exp -> exp EQUEQU exp
Rule 34    exp -> exp LE exp
Rule 35    exp -> exp LT exp
Rule 36    exp -> exp GE exp
Rule 37    exp -> exp GT exp
Rule 38    exp -> exp ANDAND exp
Rule 39    exp -> exp OROR exp
Rule 40    exp -> IDENTIFIER LPAREN optargs RPAREN
Rule 41    optargs -> args
Rule 42    optargs -> <empty>
Rule 43    args -> exp COMMA args
Rule 44    args -> exp

Terminals, with rules where they appear

ANDAND               : 38
COMMA                : 7 43
DEFINE               : 20
DIVIDE               : 32
ELSE                 : 17
EQUAL                : 18 20
EQUEQU               : 33
FALSE                : 26
FUNCTION             : 3
GE                   : 36
GT                   : 37
IDENTIFIER           : 3 7 8 18 20 22 40
IF                   : 16 17
LBRACE               : 9
LE                   : 34
LPAREN               : 3 23 40
LT                   : 35
MINUS                : 29
MOD                  : 31
NOT                  : 27
NUMBER               : 24
OROR                 : 39
PLUS                 : 28
RBRACE               : 9
RETURN               : 19
RPAREN               : 3 23 40
SEMICOLON            : 15 18 19 20 21
TIMES                : 30
TRUE                 : 25
error                : 

Nonterminals, with rules where they appear

args                 : 41 43
calc                 : 1 0
compoundstmt         : 3 13 17
element              : 1
exp                  : 16 17 18 19 20 21 23 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 43 44
optargs              : 40
optparams            : 3
optsemi              : 16 17
params               : 5 7
sstmt                : 4 10 12
stmt_or_compound     : 16 17
stmts                : 9 10

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . element calc
    (2) calc -> .
    (3) element -> . FUNCTION IDENTIFIER LPAREN optparams RPAREN compoundstmt
    (4) element -> . sstmt
    (16) sstmt -> . IF exp stmt_or_compound optsemi
    (17) sstmt -> . IF exp compoundstmt ELSE stmt_or_compound optsemi
    (18) sstmt -> . IDENTIFIER EQUAL exp SEMICOLON
    (19) sstmt -> . RETURN exp SEMICOLON
    (20) sstmt -> . DEFINE IDENTIFIER EQUAL exp SEMICOLON
    (21) sstmt -> . exp SEMICOLON
    (22) exp -> . IDENTIFIER
    (23) exp -> . LPAREN exp RPAREN
    (24) exp -> . NUMBER
    (25) exp -> . TRUE
    (26) exp -> . FALSE
    (27) exp -> . NOT exp
    (28) exp -> . exp PLUS exp
    (29) exp -> . exp MINUS exp
    (30) exp -> . exp TIMES exp
    (31) exp -> . exp MOD exp
    (32) exp -> . exp DIVIDE exp
    (33) exp -> . exp EQUEQU exp
    (34) exp -> . exp LE exp
    (35) exp -> . exp LT exp
    (36) exp -> . exp GE exp
    (37) exp -> . exp GT exp
    (38) exp -> . exp ANDAND exp
    (39) exp -> . exp OROR exp
    (40) exp -> . IDENTIFIER LPAREN optargs RPAREN

    $end            reduce using rule 2 (calc -> .)
    FUNCTION        shift and go to state 6
    IF              shift and go to state 9
    IDENTIFIER      shift and go to state 10
    RETURN          shift and go to state 1
    DEFINE          shift and go to state 5
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    TRUE            shift and go to state 2
    FALSE           shift and go to state 11
    NOT             shift and go to state 14

    sstmt                          shift and go to state 3
    element                        shift and go to state 12
    exp                            shift and go to state 13
    calc                           shift and go to state 4

state 1

    (19) sstmt -> RETURN . exp SEMICOLON
    (22) exp -> . IDENTIFIER
    (23) exp -> . LPAREN exp RPAREN
    (24) exp -> . NUMBER
    (25) exp -> . TRUE
    (26) exp -> . FALSE
    (27) exp -> . NOT exp
    (28) exp -> . exp PLUS exp
    (29) exp -> . exp MINUS exp
    (30) exp -> . exp TIMES exp
    (31) exp -> . exp MOD exp
    (32) exp -> . exp DIVIDE exp
    (33) exp -> . exp EQUEQU exp
    (34) exp -> . exp LE exp
    (35) exp -> . exp LT exp
    (36) exp -> . exp GE exp
    (37) exp -> . exp GT exp
    (38) exp -> . exp ANDAND exp
    (39) exp -> . exp OROR exp
    (40) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 15
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    TRUE            shift and go to state 2
    FALSE           shift and go to state 11
    NOT             shift and go to state 14

    exp                            shift and go to state 16

state 2

    (25) exp -> TRUE .

    SEMICOLON       reduce using rule 25 (exp -> TRUE .)
    PLUS            reduce using rule 25 (exp -> TRUE .)
    MINUS           reduce using rule 25 (exp -> TRUE .)
    TIMES           reduce using rule 25 (exp -> TRUE .)
    MOD             reduce using rule 25 (exp -> TRUE .)
    DIVIDE          reduce using rule 25 (exp -> TRUE .)
    EQUEQU          reduce using rule 25 (exp -> TRUE .)
    LE              reduce using rule 25 (exp -> TRUE .)
    LT              reduce using rule 25 (exp -> TRUE .)
    GE              reduce using rule 25 (exp -> TRUE .)
    GT              reduce using rule 25 (exp -> TRUE .)
    ANDAND          reduce using rule 25 (exp -> TRUE .)
    OROR            reduce using rule 25 (exp -> TRUE .)
    RPAREN          reduce using rule 25 (exp -> TRUE .)
    LBRACE          reduce using rule 25 (exp -> TRUE .)
    IF              reduce using rule 25 (exp -> TRUE .)
    IDENTIFIER      reduce using rule 25 (exp -> TRUE .)
    RETURN          reduce using rule 25 (exp -> TRUE .)
    DEFINE          reduce using rule 25 (exp -> TRUE .)
    LPAREN          reduce using rule 25 (exp -> TRUE .)
    NUMBER          reduce using rule 25 (exp -> TRUE .)
    TRUE            reduce using rule 25 (exp -> TRUE .)
    FALSE           reduce using rule 25 (exp -> TRUE .)
    NOT             reduce using rule 25 (exp -> TRUE .)
    COMMA           reduce using rule 25 (exp -> TRUE .)


state 3

    (4) element -> sstmt .

    FUNCTION        reduce using rule 4 (element -> sstmt .)
    IF              reduce using rule 4 (element -> sstmt .)
    IDENTIFIER      reduce using rule 4 (element -> sstmt .)
    RETURN          reduce using rule 4 (element -> sstmt .)
    DEFINE          reduce using rule 4 (element -> sstmt .)
    LPAREN          reduce using rule 4 (element -> sstmt .)
    NUMBER          reduce using rule 4 (element -> sstmt .)
    TRUE            reduce using rule 4 (element -> sstmt .)
    FALSE           reduce using rule 4 (element -> sstmt .)
    NOT             reduce using rule 4 (element -> sstmt .)
    $end            reduce using rule 4 (element -> sstmt .)


state 4

    (0) S' -> calc .



state 5

    (20) sstmt -> DEFINE . IDENTIFIER EQUAL exp SEMICOLON

    IDENTIFIER      shift and go to state 17


state 6

    (3) element -> FUNCTION . IDENTIFIER LPAREN optparams RPAREN compoundstmt

    IDENTIFIER      shift and go to state 18


state 7

    (24) exp -> NUMBER .

    SEMICOLON       reduce using rule 24 (exp -> NUMBER .)
    PLUS            reduce using rule 24 (exp -> NUMBER .)
    MINUS           reduce using rule 24 (exp -> NUMBER .)
    TIMES           reduce using rule 24 (exp -> NUMBER .)
    MOD             reduce using rule 24 (exp -> NUMBER .)
    DIVIDE          reduce using rule 24 (exp -> NUMBER .)
    EQUEQU          reduce using rule 24 (exp -> NUMBER .)
    LE              reduce using rule 24 (exp -> NUMBER .)
    LT              reduce using rule 24 (exp -> NUMBER .)
    GE              reduce using rule 24 (exp -> NUMBER .)
    GT              reduce using rule 24 (exp -> NUMBER .)
    ANDAND          reduce using rule 24 (exp -> NUMBER .)
    OROR            reduce using rule 24 (exp -> NUMBER .)
    RPAREN          reduce using rule 24 (exp -> NUMBER .)
    LBRACE          reduce using rule 24 (exp -> NUMBER .)
    IF              reduce using rule 24 (exp -> NUMBER .)
    IDENTIFIER      reduce using rule 24 (exp -> NUMBER .)
    RETURN          reduce using rule 24 (exp -> NUMBER .)
    DEFINE          reduce using rule 24 (exp -> NUMBER .)
    LPAREN          reduce using rule 24 (exp -> NUMBER .)
    NUMBER          reduce using rule 24 (exp -> NUMBER .)
    TRUE            reduce using rule 24 (exp -> NUMBER .)
    FALSE           reduce using rule 24 (exp -> NUMBER .)
    NOT             reduce using rule 24 (exp -> NUMBER .)
    COMMA           reduce using rule 24 (exp -> NUMBER .)


state 8

    (23) exp -> LPAREN . exp RPAREN
    (22) exp -> . IDENTIFIER
    (23) exp -> . LPAREN exp RPAREN
    (24) exp -> . NUMBER
    (25) exp -> . TRUE
    (26) exp -> . FALSE
    (27) exp -> . NOT exp
    (28) exp -> . exp PLUS exp
    (29) exp -> . exp MINUS exp
    (30) exp -> . exp TIMES exp
    (31) exp -> . exp MOD exp
    (32) exp -> . exp DIVIDE exp
    (33) exp -> . exp EQUEQU exp
    (34) exp -> . exp LE exp
    (35) exp -> . exp LT exp
    (36) exp -> . exp GE exp
    (37) exp -> . exp GT exp
    (38) exp -> . exp ANDAND exp
    (39) exp -> . exp OROR exp
    (40) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 15
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    TRUE            shift and go to state 2
    FALSE           shift and go to state 11
    NOT             shift and go to state 14

    exp                            shift and go to state 19

state 9

    (16) sstmt -> IF . exp stmt_or_compound optsemi
    (17) sstmt -> IF . exp compoundstmt ELSE stmt_or_compound optsemi
    (22) exp -> . IDENTIFIER
    (23) exp -> . LPAREN exp RPAREN
    (24) exp -> . NUMBER
    (25) exp -> . TRUE
    (26) exp -> . FALSE
    (27) exp -> . NOT exp
    (28) exp -> . exp PLUS exp
    (29) exp -> . exp MINUS exp
    (30) exp -> . exp TIMES exp
    (31) exp -> . exp MOD exp
    (32) exp -> . exp DIVIDE exp
    (33) exp -> . exp EQUEQU exp
    (34) exp -> . exp LE exp
    (35) exp -> . exp LT exp
    (36) exp -> . exp GE exp
    (37) exp -> . exp GT exp
    (38) exp -> . exp ANDAND exp
    (39) exp -> . exp OROR exp
    (40) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 15
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    TRUE            shift and go to state 2
    FALSE           shift and go to state 11
    NOT             shift and go to state 14

    exp                            shift and go to state 20

state 10

    (18) sstmt -> IDENTIFIER . EQUAL exp SEMICOLON
    (22) exp -> IDENTIFIER .
    (40) exp -> IDENTIFIER . LPAREN optargs RPAREN

    EQUAL           shift and go to state 21
    SEMICOLON       reduce using rule 22 (exp -> IDENTIFIER .)
    PLUS            reduce using rule 22 (exp -> IDENTIFIER .)
    MINUS           reduce using rule 22 (exp -> IDENTIFIER .)
    TIMES           reduce using rule 22 (exp -> IDENTIFIER .)
    MOD             reduce using rule 22 (exp -> IDENTIFIER .)
    DIVIDE          reduce using rule 22 (exp -> IDENTIFIER .)
    EQUEQU          reduce using rule 22 (exp -> IDENTIFIER .)
    LE              reduce using rule 22 (exp -> IDENTIFIER .)
    LT              reduce using rule 22 (exp -> IDENTIFIER .)
    GE              reduce using rule 22 (exp -> IDENTIFIER .)
    GT              reduce using rule 22 (exp -> IDENTIFIER .)
    ANDAND          reduce using rule 22 (exp -> IDENTIFIER .)
    OROR            reduce using rule 22 (exp -> IDENTIFIER .)
    LPAREN          shift and go to state 22


state 11

    (26) exp -> FALSE .

    SEMICOLON       reduce using rule 26 (exp -> FALSE .)
    PLUS            reduce using rule 26 (exp -> FALSE .)
    MINUS           reduce using rule 26 (exp -> FALSE .)
    TIMES           reduce using rule 26 (exp -> FALSE .)
    MOD             reduce using rule 26 (exp -> FALSE .)
    DIVIDE          reduce using rule 26 (exp -> FALSE .)
    EQUEQU          reduce using rule 26 (exp -> FALSE .)
    LE              reduce using rule 26 (exp -> FALSE .)
    LT              reduce using rule 26 (exp -> FALSE .)
    GE              reduce using rule 26 (exp -> FALSE .)
    GT              reduce using rule 26 (exp -> FALSE .)
    ANDAND          reduce using rule 26 (exp -> FALSE .)
    OROR            reduce using rule 26 (exp -> FALSE .)
    RPAREN          reduce using rule 26 (exp -> FALSE .)
    LBRACE          reduce using rule 26 (exp -> FALSE .)
    IF              reduce using rule 26 (exp -> FALSE .)
    IDENTIFIER      reduce using rule 26 (exp -> FALSE .)
    RETURN          reduce using rule 26 (exp -> FALSE .)
    DEFINE          reduce using rule 26 (exp -> FALSE .)
    LPAREN          reduce using rule 26 (exp -> FALSE .)
    NUMBER          reduce using rule 26 (exp -> FALSE .)
    TRUE            reduce using rule 26 (exp -> FALSE .)
    FALSE           reduce using rule 26 (exp -> FALSE .)
    NOT             reduce using rule 26 (exp -> FALSE .)
    COMMA           reduce using rule 26 (exp -> FALSE .)


state 12

    (1) calc -> element . calc
    (1) calc -> . element calc
    (2) calc -> .
    (3) element -> . FUNCTION IDENTIFIER LPAREN optparams RPAREN compoundstmt
    (4) element -> . sstmt
    (16) sstmt -> . IF exp stmt_or_compound optsemi
    (17) sstmt -> . IF exp compoundstmt ELSE stmt_or_compound optsemi
    (18) sstmt -> . IDENTIFIER EQUAL exp SEMICOLON
    (19) sstmt -> . RETURN exp SEMICOLON
    (20) sstmt -> . DEFINE IDENTIFIER EQUAL exp SEMICOLON
    (21) sstmt -> . exp SEMICOLON
    (22) exp -> . IDENTIFIER
    (23) exp -> . LPAREN exp RPAREN
    (24) exp -> . NUMBER
    (25) exp -> . TRUE
    (26) exp -> . FALSE
    (27) exp -> . NOT exp
    (28) exp -> . exp PLUS exp
    (29) exp -> . exp MINUS exp
    (30) exp -> . exp TIMES exp
    (31) exp -> . exp MOD exp
    (32) exp -> . exp DIVIDE exp
    (33) exp -> . exp EQUEQU exp
    (34) exp -> . exp LE exp
    (35) exp -> . exp LT exp
    (36) exp -> . exp GE exp
    (37) exp -> . exp GT exp
    (38) exp -> . exp ANDAND exp
    (39) exp -> . exp OROR exp
    (40) exp -> . IDENTIFIER LPAREN optargs RPAREN

    $end            reduce using rule 2 (calc -> .)
    FUNCTION        shift and go to state 6
    IF              shift and go to state 9
    IDENTIFIER      shift and go to state 10
    RETURN          shift and go to state 1
    DEFINE          shift and go to state 5
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    TRUE            shift and go to state 2
    FALSE           shift and go to state 11
    NOT             shift and go to state 14

    sstmt                          shift and go to state 3
    element                        shift and go to state 12
    exp                            shift and go to state 13
    calc                           shift and go to state 23

state 13

    (21) sstmt -> exp . SEMICOLON
    (28) exp -> exp . PLUS exp
    (29) exp -> exp . MINUS exp
    (30) exp -> exp . TIMES exp
    (31) exp -> exp . MOD exp
    (32) exp -> exp . DIVIDE exp
    (33) exp -> exp . EQUEQU exp
    (34) exp -> exp . LE exp
    (35) exp -> exp . LT exp
    (36) exp -> exp . GE exp
    (37) exp -> exp . GT exp
    (38) exp -> exp . ANDAND exp
    (39) exp -> exp . OROR exp

    SEMICOLON       shift and go to state 28
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 31
    MOD             shift and go to state 36
    DIVIDE          shift and go to state 27
    EQUEQU          shift and go to state 29
    LE              shift and go to state 26
    LT              shift and go to state 32
    GE              shift and go to state 30
    GT              shift and go to state 33
    ANDAND          shift and go to state 24
    OROR            shift and go to state 25


state 14

    (27) exp -> NOT . exp
    (22) exp -> . IDENTIFIER
    (23) exp -> . LPAREN exp RPAREN
    (24) exp -> . NUMBER
    (25) exp -> . TRUE
    (26) exp -> . FALSE
    (27) exp -> . NOT exp
    (28) exp -> . exp PLUS exp
    (29) exp -> . exp MINUS exp
    (30) exp -> . exp TIMES exp
    (31) exp -> . exp MOD exp
    (32) exp -> . exp DIVIDE exp
    (33) exp -> . exp EQUEQU exp
    (34) exp -> . exp LE exp
    (35) exp -> . exp LT exp
    (36) exp -> . exp GE exp
    (37) exp -> . exp GT exp
    (38) exp -> . exp ANDAND exp
    (39) exp -> . exp OROR exp
    (40) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 15
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    TRUE            shift and go to state 2
    FALSE           shift and go to state 11
    NOT             shift and go to state 14

    exp                            shift and go to state 37

state 15

    (22) exp -> IDENTIFIER .
    (40) exp -> IDENTIFIER . LPAREN optargs RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    SEMICOLON       reduce using rule 22 (exp -> IDENTIFIER .)
    PLUS            reduce using rule 22 (exp -> IDENTIFIER .)
    MINUS           reduce using rule 22 (exp -> IDENTIFIER .)
    TIMES           reduce using rule 22 (exp -> IDENTIFIER .)
    MOD             reduce using rule 22 (exp -> IDENTIFIER .)
    DIVIDE          reduce using rule 22 (exp -> IDENTIFIER .)
    EQUEQU          reduce using rule 22 (exp -> IDENTIFIER .)
    LE              reduce using rule 22 (exp -> IDENTIFIER .)
    LT              reduce using rule 22 (exp -> IDENTIFIER .)
    GE              reduce using rule 22 (exp -> IDENTIFIER .)
    GT              reduce using rule 22 (exp -> IDENTIFIER .)
    ANDAND          reduce using rule 22 (exp -> IDENTIFIER .)
    OROR            reduce using rule 22 (exp -> IDENTIFIER .)
    RPAREN          reduce using rule 22 (exp -> IDENTIFIER .)
    LBRACE          reduce using rule 22 (exp -> IDENTIFIER .)
    IF              reduce using rule 22 (exp -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 22 (exp -> IDENTIFIER .)
    RETURN          reduce using rule 22 (exp -> IDENTIFIER .)
    DEFINE          reduce using rule 22 (exp -> IDENTIFIER .)
    NUMBER          reduce using rule 22 (exp -> IDENTIFIER .)
    TRUE            reduce using rule 22 (exp -> IDENTIFIER .)
    FALSE           reduce using rule 22 (exp -> IDENTIFIER .)
    NOT             reduce using rule 22 (exp -> IDENTIFIER .)
    COMMA           reduce using rule 22 (exp -> IDENTIFIER .)
    LPAREN          shift and go to state 22

  ! LPAREN          [ reduce using rule 22 (exp -> IDENTIFIER .) ]


state 16

    (19) sstmt -> RETURN exp . SEMICOLON
    (28) exp -> exp . PLUS exp
    (29) exp -> exp . MINUS exp
    (30) exp -> exp . TIMES exp
    (31) exp -> exp . MOD exp
    (32) exp -> exp . DIVIDE exp
    (33) exp -> exp . EQUEQU exp
    (34) exp -> exp . LE exp
    (35) exp -> exp . LT exp
    (36) exp -> exp . GE exp
    (37) exp -> exp . GT exp
    (38) exp -> exp . ANDAND exp
    (39) exp -> exp . OROR exp

    SEMICOLON       shift and go to state 38
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 31
    MOD             shift and go to state 36
    DIVIDE          shift and go to state 27
    EQUEQU          shift and go to state 29
    LE              shift and go to state 26
    LT              shift and go to state 32
    GE              shift and go to state 30
    GT              shift and go to state 33
    ANDAND          shift and go to state 24
    OROR            shift and go to state 25


state 17

    (20) sstmt -> DEFINE IDENTIFIER . EQUAL exp SEMICOLON

    EQUAL           shift and go to state 39


state 18

    (3) element -> FUNCTION IDENTIFIER . LPAREN optparams RPAREN compoundstmt

    LPAREN          shift and go to state 40


state 19

    (23) exp -> LPAREN exp . RPAREN
    (28) exp -> exp . PLUS exp
    (29) exp -> exp . MINUS exp
    (30) exp -> exp . TIMES exp
    (31) exp -> exp . MOD exp
    (32) exp -> exp . DIVIDE exp
    (33) exp -> exp . EQUEQU exp
    (34) exp -> exp . LE exp
    (35) exp -> exp . LT exp
    (36) exp -> exp . GE exp
    (37) exp -> exp . GT exp
    (38) exp -> exp . ANDAND exp
    (39) exp -> exp . OROR exp

    RPAREN          shift and go to state 41
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 31
    MOD             shift and go to state 36
    DIVIDE          shift and go to state 27
    EQUEQU          shift and go to state 29
    LE              shift and go to state 26
    LT              shift and go to state 32
    GE              shift and go to state 30
    GT              shift and go to state 33
    ANDAND          shift and go to state 24
    OROR            shift and go to state 25


state 20

    (16) sstmt -> IF exp . stmt_or_compound optsemi
    (17) sstmt -> IF exp . compoundstmt ELSE stmt_or_compound optsemi
    (28) exp -> exp . PLUS exp
    (29) exp -> exp . MINUS exp
    (30) exp -> exp . TIMES exp
    (31) exp -> exp . MOD exp
    (32) exp -> exp . DIVIDE exp
    (33) exp -> exp . EQUEQU exp
    (34) exp -> exp . LE exp
    (35) exp -> exp . LT exp
    (36) exp -> exp . GE exp
    (37) exp -> exp . GT exp
    (38) exp -> exp . ANDAND exp
    (39) exp -> exp . OROR exp
    (12) stmt_or_compound -> . sstmt
    (13) stmt_or_compound -> . compoundstmt
    (9) compoundstmt -> . LBRACE stmts RBRACE
    (16) sstmt -> . IF exp stmt_or_compound optsemi
    (17) sstmt -> . IF exp compoundstmt ELSE stmt_or_compound optsemi
    (18) sstmt -> . IDENTIFIER EQUAL exp SEMICOLON
    (19) sstmt -> . RETURN exp SEMICOLON
    (20) sstmt -> . DEFINE IDENTIFIER EQUAL exp SEMICOLON
    (21) sstmt -> . exp SEMICOLON
    (22) exp -> . IDENTIFIER
    (23) exp -> . LPAREN exp RPAREN
    (24) exp -> . NUMBER
    (25) exp -> . TRUE
    (26) exp -> . FALSE
    (27) exp -> . NOT exp
    (28) exp -> . exp PLUS exp
    (29) exp -> . exp MINUS exp
    (30) exp -> . exp TIMES exp
    (31) exp -> . exp MOD exp
    (32) exp -> . exp DIVIDE exp
    (33) exp -> . exp EQUEQU exp
    (34) exp -> . exp LE exp
    (35) exp -> . exp LT exp
    (36) exp -> . exp GE exp
    (37) exp -> . exp GT exp
    (38) exp -> . exp ANDAND exp
    (39) exp -> . exp OROR exp
    (40) exp -> . IDENTIFIER LPAREN optargs RPAREN

    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 31
    MOD             shift and go to state 36
    DIVIDE          shift and go to state 27
    EQUEQU          shift and go to state 29
    LE              shift and go to state 26
    LT              shift and go to state 32
    GE              shift and go to state 30
    GT              shift and go to state 33
    ANDAND          shift and go to state 24
    OROR            shift and go to state 25
    LBRACE          shift and go to state 44
    IF              shift and go to state 9
    IDENTIFIER      shift and go to state 10
    RETURN          shift and go to state 1
    DEFINE          shift and go to state 5
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    TRUE            shift and go to state 2
    FALSE           shift and go to state 11
    NOT             shift and go to state 14

    stmt_or_compound               shift and go to state 42
    sstmt                          shift and go to state 43
    exp                            shift and go to state 13
    compoundstmt                   shift and go to state 45

state 21

    (18) sstmt -> IDENTIFIER EQUAL . exp SEMICOLON
    (22) exp -> . IDENTIFIER
    (23) exp -> . LPAREN exp RPAREN
    (24) exp -> . NUMBER
    (25) exp -> . TRUE
    (26) exp -> . FALSE
    (27) exp -> . NOT exp
    (28) exp -> . exp PLUS exp
    (29) exp -> . exp MINUS exp
    (30) exp -> . exp TIMES exp
    (31) exp -> . exp MOD exp
    (32) exp -> . exp DIVIDE exp
    (33) exp -> . exp EQUEQU exp
    (34) exp -> . exp LE exp
    (35) exp -> . exp LT exp
    (36) exp -> . exp GE exp
    (37) exp -> . exp GT exp
    (38) exp -> . exp ANDAND exp
    (39) exp -> . exp OROR exp
    (40) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 15
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    TRUE            shift and go to state 2
    FALSE           shift and go to state 11
    NOT             shift and go to state 14

    exp                            shift and go to state 46

state 22

    (40) exp -> IDENTIFIER LPAREN . optargs RPAREN
    (41) optargs -> . args
    (42) optargs -> .
    (43) args -> . exp COMMA args
    (44) args -> . exp
    (22) exp -> . IDENTIFIER
    (23) exp -> . LPAREN exp RPAREN
    (24) exp -> . NUMBER
    (25) exp -> . TRUE
    (26) exp -> . FALSE
    (27) exp -> . NOT exp
    (28) exp -> . exp PLUS exp
    (29) exp -> . exp MINUS exp
    (30) exp -> . exp TIMES exp
    (31) exp -> . exp MOD exp
    (32) exp -> . exp DIVIDE exp
    (33) exp -> . exp EQUEQU exp
    (34) exp -> . exp LE exp
    (35) exp -> . exp LT exp
    (36) exp -> . exp GE exp
    (37) exp -> . exp GT exp
    (38) exp -> . exp ANDAND exp
    (39) exp -> . exp OROR exp
